--- a/tutorials/viewing_svg/viewing_svg.html
+++ b/tutorials/viewing_svg/viewing_svg.html
@@ -13,7 +13,8 @@
   </head>
   <body>
     <div class="wrapper">
-      <header />
+      
+      <header></header> 
       
       <section>
         <h2>Viewing SVG</h2>
