added Octavian's link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
 
 <p><a href="https://plus.google.com/u/0/communities/103214861889274824229">Google+ Community</a></p>
 
-<p><a href="tutorials/viewing_svg/viewing_svg.html">test link</a></p>
+<h3>Community Links</h3>
+
+SVG Links by our members!
+
+<ul>
+    <li><a href="http://tavifom.blogspot.ro/">Vernier Caliper</a> (Octavian Fometescu) - interactive simulations of technical measuring instruments</li>
+</ul>
+
+<!--<p><a href="tutorials/viewing_svg/viewing_svg.html">test link</a></p>-->
 
 
 <!--
