--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <section>
         <h3>Welcome to the SVG Developers Google+ Community pages</h3>
 
-<p>Here you will find random examples, demos and tutorials from members of the group. The group is only days old so if you are interested in developing with SVG please feel free to join!</p>
+<p>Here you will find examples, demos and tutorials from members of the group. The group is new so if you are interested in developing with SVG please feel free to join!</p>
 
 <p><a href="https://plus.google.com/u/0/communities/103214861889274824229">Google+ Community</a></p>
 
