--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -25,14 +25,22 @@
       <section>
         <h3>Welcome to the SVG Developers Google+ Community pages</h3>
 
-<p>Here you will find random examples, demos and tutorials from members of the group. The group is only days old so if you are interested in developing with SVG please feel free to join!</p>
+<p>Here you will find examples, demos and tutorials from members of the group. The group is new so if you are interested in developing with SVG please feel free to join!</p>
 
 <p><a href="https://plus.google.com/u/0/communities/103214861889274824229">Google+ Community</a></p>
+
+<h3>Community Links</h3>
+
+SVG Links by our members!
+
+<ul>
+    <li><a href="http://tavifom.blogspot.ro/">Vernier Caliper</a> (Octavian Fometescu) - interactive simulations of technical measuring instruments</li>
+</ul>
+
+<!--<p><a href="tutorials/viewing_svg/viewing_svg.html">test link</a></p>-->
+
+
 <!--
-<p><a href="tutorials/viewing_svg/viewing_svg.html">test link</a></p>
-
-
-
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
