--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 
 SVG Links by our members! 
 
-<ul>
+<ul style="margin-top:7px;">
     <li><a href="http://tavifom.blogspot.ro/">Vernier Caliper</a> (Octavian Fometescu) - interactive simulations of technical measuring instruments</li>
+    <li><a href="/members/pschonefeld/sullivan/index.html">Animated SVG Filter Effect (Peter Schonefeld)</a></li>
 </ul>
 
 <!--<p><a href="tutorials/viewing_svg/viewing_svg.html">test link</a></p>-->
