--- a/header.html
+++ b/header.html
@@ -1,4 +1,5 @@
         <h1>SVG Developers</h1>
+        <img src="svg.jpg" style="width:265px;height:265px" />
         <p class="view">
           <a href="http://svg-developers.github.io/">Site home</a><br/>
           <a href="https://plus.google.com/u/0/communities/103214861889274824229">Join Our Google+ Community</a><br/>        
