--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -16,11 +16,11 @@
     <div class="wrapper">
       <header>
         <h1>SVG Developers</h1>
-        <p></p>
-
-
-        <p class="view"><a href="https://github.com/svg-developers">View Our GitHub Profile</a></p>
-
+        <img src="/svg.jpg" style="width:265px;height:265px" />
+        <p class="view">
+          <a href="https://plus.google.com/u/0/communities/103214861889274824229">Join Our Google+ Community</a><br/>        
+          <a href="https://github.com/svg-developers">View Our GitHub Profile</a>
+        </p>
       </header>
       <section>
         <h3>Welcome to the SVG Developers Google+ Community pages</h3>
