--- a/members/pschonefeld/sullivan/sullivan_page/web/index.html
+++ b/members/pschonefeld/sullivan/sullivan_page/web/index.html
@@ -72,7 +72,7 @@
           </svg>
         </div>
         
-        <p style="margin-top:14px">While SGV filter effects are now implemented in all major browsers, unfortunately this is only working as we like it in Chrome.  Script animation in IE is working the final comp on the background texture and final SourceGraphic are out. This also seems to be the problem in ff and opera. The good news is that the problems are things to be fixed rather than 'not implemented' features, so just a matter of ironing out the bugs. Declaritive animation on the filter effects doesnt seem to be working in any of the browsers.</p>
+        <p style="margin-top:14px">While SVG filter effects are now implemented in all major browsers, unfortunately this example is only working in Chrome.  While script animation in IE is working, the final comp on the background texture and SourceGraphic are out. This also seems to be the problem in ff and opera. The good news is that the problems are things to be fixed rather than 'not implemented' features, so just a matter of time while the bugs are ironed out. Declaritive animation on the filter effects doesnt seem to be working in any of the browsers.</p>
 
         <div style="clear:both">
           <figure style="float:left;margin-left:7px;display:block">
@@ -154,7 +154,7 @@ void main(){
       </code>  
       </p>
       <p style="margin-top:14px;padding:7px;background:#dedede">
-         Our Google+ SVG-Developer community is brand new and looking for new members. There is also a space here for your SVG examples and tutorials. 
+         Our Google+ <a href="https://plus.google.com/u/0/communities/103214861889274824229">SVG-Developers community</a> is brand new and looking for new members. There is also a space here for your SVG examples and tutorials. 
       </p>        
         
         <!--Your page app ends here --->
