--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>SVG Developers</h1>
-        <img src="/svg.jpg" style="width:265px;height:265px" />
+        <img src="/svg.jpg" style="width:265px;height:265px;margin-top:-14px;margin-left: -30px;" />
         <p class="view">
           <a href="https://plus.google.com/u/0/communities/103214861889274824229">Join Our Google+ Community</a><br/>        
           <a href="https://github.com/svg-developers">View Our GitHub Profile</a>
