--- a/members/pschonefeld/sullivan/sullivan_page/web/index.html
+++ b/members/pschonefeld/sullivan/sullivan_page/web/index.html
@@ -101,7 +101,7 @@ void main(){
     if(count==120 || count == 50){
       multiplier *= -1;
     }
-    count = count + (1*multiplier);
+    count += 1 * multiplier;
     query("#fltrTexture1").attributes["filterRes"] = "${count}";    
     query("#fltrprimTurbulence").attributes["seed"] = "${rng.nextInt(10)}"; 
   });
