--- a/members/pschonefeld/sullivan/index.html
+++ b/members/pschonefeld/sullivan/index.html
@@ -72,7 +72,7 @@
           </svg>
         </div>
         
-        <p style="margin-top:14px">While SVG filter effects are now implemented in all major browsers, unfortunately this example is only working in Chrome.  While script animation in IE is working, the final comp on the background texture and SourceGraphic are out. This also seems to be the problem in ff and opera. The good news is that the problems are things to be fixed rather than 'not implemented' features, so just a matter of time while the bugs are ironed out. Declaritive animation on the filter effects doesnt seem to be working in any of the browsers.</p>
+        <p style="margin-top:14px">While SVG filter effects are now implemented in all major browsers, unfortunately this example is only working in Chrome/Safari (webkit).  While script animation in IE is working, the final comp on the background texture and SourceGraphic are out. This also seems to be the problem in ff and opera. The good news is that the problems are things to be fixed rather than 'not implemented' features, so just a matter of time while the bugs are ironed out. Declaritive animation on the filter effects doesnt seem to be working in any of the browsers.</p>
 
         <div style="clear:both">
           <figure style="float:left;margin-left:7px;display:block">
