add chrome image

--- a/members/pschonefeld/sullivan/index.html
+++ b/members/pschonefeld/sullivan/index.html
@@ -82,10 +82,14 @@
           <figure style="float:right;margin-left:7px;display:block">
               <img src="images/ff.png" style="width:200px;height:275px" />
               <figcaption>in Firefox 20.0</figcaption>
-          </figure>             
+          </figure>
+          <figure style="float:right;margin-left:7px;display:block">
+              <img src="images/chrome.png" style="width:200px;height:275px" />
+          <figcaption>in Chrome 27.0</figcaption>
+          </figure>
         </div>        
 
-        <p style="margin-top:14px">
+        <p style="margin-top:14px;clear:both">
           Dart Code<br/>
           <code>
             <pre>
